--- a/TT/templates/pages/home.html
+++ b/TT/templates/pages/home.html
@@ -7,9 +7,14 @@
         <div class="ui text container grid middle aligned">
             <div class="middle aligned row">
                 <div class="column">
-                    <div class="ui centered header inverted">
+                    <div class="ui centered header">
                         <h1 class="content" id="main-header">
-                            Trefts Technologies
+                            Trefts
+                        </h1>
+                    </div>
+                    <div class="ui centered header">
+                        <h1 class="content" id="main-header">
+                            Technologies.
                         </h1>
                     </div>
                 </div>
