--- a/TT/templates/pages/home.html
+++ b/TT/templates/pages/home.html
@@ -6,13 +6,13 @@
     <div id="header-block">
         <div class="ui text container grid middle aligned">
             <div class="middle aligned row">
-                <div class="column">
-                    <div class="ui centered header">
+                <div class="eight wide centered column">
+                    <div class="ui header">
                         <h1 class="content" id="main-header">
                             Trefts
                         </h1>
                     </div>
-                    <div class="ui centered header">
+                    <div class="ui header">
                         <h1 class="content" id="main-header">
                             Technologies.
                         </h1>
