--- a/TT/templates/base.html
+++ b/TT/templates/base.html
@@ -1,7 +1,16 @@
 {% load static %}
 <html>
     <head>
-        <title>Trefts Technologes - {{ page_title }}</title>
+        {% if object.title %}
+            <title>{{ object.title }}</title>
+        {% else %}
+            {% if page_title %}
+                <title>{{ page_title }} - Trefts Technologes</title>
+            {% else %}
+                <title>Trefts Technologes</title>
+            {% endif %}
+        {% endif %}
+
         <link rel="shortcut icon" href="#">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&display=swap">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
@@ -25,7 +34,7 @@
         {% if home_nav %}
             background: none;
         {% else %}
-            background: white;
+            background: rgba(255, 255, 255, 0.9);
         {% endif %}
             z-index: 10;
         }
@@ -52,7 +61,7 @@
                 {% endif %}
             </div>
             <div class="button-group">
-                <a class="item" href="{% url "articles:article_list" %}">Articles</a>
+                <a class="item" href="{% url "articles:list" %}">Articles</a>
             </div>
         </div>
 
