--- a/TT/templates/articles/detail.html
+++ b/TT/templates/articles/detail.html
@@ -4,6 +4,10 @@
 
 {% block content %}
     <div class="ui container">
+    {% if not object.published %}
+        <h1 style="font-size: 45px; color: red; margin: 40% auto;">This article remains unpublished!</h1>
+    {% endif %}
+
         <div class="ui centered container heading">
             <div class="ui centered rounded image">
                 <img id="heading-image" src="{{ object.thumbnail.url }}">
