--- a/TT/templates/base.html
+++ b/TT/templates/base.html
@@ -31,12 +31,13 @@
             position: fixed;
             top: 0;
             width: 100%;
+            height: 8%;
+            z-index: 10;
         {% if home_nav %}
             background: none;
         {% else %}
             background: rgba(255, 255, 255, 0.9);
         {% endif %}
-            z-index: 10;
         }
 
         .button-group {
@@ -47,7 +48,7 @@
             padding: 25px;
             color: #222222;
             font-weight: light;
-            font-size: 20px;
+            font-size: 100%;
             margin-right: 40px;
         }
 
