Login and logout buttons in the navbar work. Login activates modal form.

--- a/TT/templates/articles/detail.html
+++ b/TT/templates/articles/detail.html
@@ -26,7 +26,7 @@
         </div>
         <div class="ui horizontal divider"></div>
         <div class="ui centered container">
-            <div class="ui content"></div>
+            <div id="main-content" class="ui content"></div>
         </div>
     </div>
 
@@ -41,5 +41,11 @@
             width: auto;
         }
     </style>
+
+    <script>
+        $(document).ready(function () {
+            $('#main-content').load('{{ object.content_template_url }}')
+        })
+    </script>
 {% endblock content %}
 
