--- a/TT/templates/articles/list.html
+++ b/TT/templates/articles/list.html
@@ -49,6 +49,7 @@
             position: relative;
             padding: 40px;
             transition: all 0.1s ease-in;
+            font-size: 1.5em;
         }
 
         .publish-date {
