--- a/TT/templates/pages/home.html
+++ b/TT/templates/pages/home.html
@@ -8,12 +8,12 @@
             <div class="middle aligned row">
                 <div class="eight wide centered column">
                     <div class="ui header">
-                        <h1 class="content" id="main-header">
+                        <h1 class="content main-header">
                             Trefts
                         </h1>
                     </div>
                     <div class="ui header">
-                        <h1 class="content" id="main-header">
+                        <h1 class="content main-header">
                             Technologies.
                         </h1>
                     </div>
@@ -71,8 +71,8 @@
             width: 100%;
         }
 
-        #main-header {
-            font-size: 75px;
+        .main-header {
+            font-size: 6em;
         }
 
         #header-subtext {
