--- a/TT/templates/base.html
+++ b/TT/templates/base.html
@@ -19,91 +19,48 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
     </head>
-    <style>
-        html, body {
-            font-family: 'Roboto', sans-serif;
-            font-weight: light;
-        }
-
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            position: fixed;
-            top: 0;
-            width: 100%;
-            height: 8%;
-            z-index: 10;
-        {% if home_nav %}
-            background: none;
-        {% else %}
-            background: rgba(255, 255, 255, 0.9);
-        {% endif %}
-        }
-
-        .button-group {
-            display: flex;
-            margin-top: 30px;
-        }
-
-        .nav_item {
-            color: #222222;
-            font-weight: bold;
-            font-size: 2em;
-            margin: 0 30px 0 30px;
-            height: 1.5em;
-        }
-
-        .ui.small.modal {
-            font-size: 1.5em;
-        }
-
-        .field > input {
-            font-size: 1.3em !important;
-        }
-
-        .ui.button.login {
-            font-size: 1.3em;
-        }
-
-        .user-dropdown-label {
-            color: #222222;
-        }
-
-        .ui.dropdown > .menu {
-            border: none;
-            background: none;
-        }
-
-        .ui.dropdown > .menu > .item {
-            color: #222222;
-            font-weight: bold;
-            font-size: 0.8em;
-        }
-
-    </style>
     <body>
-
         <div class="ui small modal">
-            <div class="large header">
+            <div class="large header login-element">
                 Log in to Trefts Technologies
             </div>
-            <div class="content">
-                <form id="login_form" class="ui form" method="post" action="{% url 'accounts:login' %}">
+            <div class="large header registration-element inactive">
+                Register on Trefts Technologies
+            </div>
+            <div class="content login-element">
+                <form id="login_form" class="ui form" method="post">
                     {% csrf_token %}
                     <div class="field">
-                        <input type="text" name="username" placeholder="Username" maxlength="30" autofocus required>
+                        <input type="text" name="username" placeholder="Username" maxlength="30" autofocus>
                     </div>
                     <div class="field">
-                        <input type="password" placeholder="Password" name="password" required>
+                        <input type="password" placeholder="Password" name="password">
+                    </div>
+                    <button type="submit" class="ui blue login button">Login</button>
+                </form>
+            </div>
+            <div class="content registration-element inactive" id="registration_menu">
+                <form class="ui form" id="registration_form" method="post">
+                    {% csrf_token %}
+                    <div class="field">
+                        <input type="text" name="username" placeholder="Username" maxlength="30" id="registration_username" autofocus>
+                    </div>
+                    <div class="field">
+                        <input type="password" placeholder="Password" id="registration_password1" name="password1">
+                    </div>
+                    <div class="field">
+                        <input type="password" placeholder="Matching Password" id="registration_password2" name="password2">
                     </div>
                     <button type="submit" class="ui blue login button">Login</button>
                 </form>
             </div>
             <div class="ui divider"></div>
-            <div class="content">
-                <p>New to Trefts Technologies?  <button type="submit" class="ui inline basic blue button">Sign Up</button></p>
+            <div class="content login-element">
+                <p>New to Trefts Technologies?  <button id="registration_menu_selector"class="ui inline basic blue button">Sign Up</button></p>
             </div>
-            {% include 'profiles/register.html' %}
+            <div class="content registration-element inactive">
+                <p>Already have an account?  <button id="login_menu_selector" class="ui inline basic blue button">Login</button></p>
+            </div>
         </div>
 
         <div class="navbar">
@@ -115,7 +72,7 @@
             <div class="button-group">
                 <a class="nav_item" href="{% url "articles:list" %}">Articles</a>
                 {% if not user.is_authenticated %}
-                <a id="login_button" class="nav_item" href="#">Login</a>
+                <a id="login_menu" class="nav_item" href="#">Login</a>
                 {% else %}
                     <div class="ui nav_item simple dropdown">
                         <a class="text user-dropdown-label" href="{% url "profiles:home" pk=user.pk %}">
@@ -143,17 +100,215 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/105/three.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js"></script>
         <script src="{% static "js/utility/perlin.js" %}"></script>
         {% block extra_js %}
         {% endblock extra_js %}
         <script>
             riot.mount('*')
 
-            $('.ui.modal').modal('attach events', '#login_button', 'show')
-//            $('#login_button').click(function (e) {
-//                $('.ui.modal').modal('show')
-//            })
-        </script>
+            function getFormData($form){
+                let unindexed_array = $form.serializeArray();
+                let indexed_array = {};
 
+                $.map(unindexed_array, function(n, i){
+                    indexed_array[n['name']] = n['value'];
+                });
+
+                return indexed_array;
+            }
+
+            {% if not user.is_authenticated %}
+            $('.ui.modal').modal('attach events', '#login_menu', 'show')
+            {% endif %}
+
+
+            $('#registration_form').form({
+                fields: {
+                    username: {
+                        identifier: 'username',
+                        rules: [
+                            {
+                                type: 'empty',
+                                prompt: 'Please enter a username.',
+                            },
+                        ],
+                    },
+                    password1: {
+                        identifier: 'password1',
+                        rules: [
+                            {
+                                type: 'empty',
+                                prompt: 'Please enter a password.',
+                            },
+                        ],
+                    },
+                    password2: {
+                        identifier: 'password2',
+                        rules: [
+                            {
+                                type: 'empty',
+                                prompt: 'Please enter your password again.',
+                            },
+                            {
+                                type: 'match[password1]',
+                                prompt: 'Passwords must match.'
+                            },
+                        ],
+                    },
+                },
+                inline: true,
+                onSuccess: function (e) {
+                    console.log('form success')
+                    console.log(e)
+                    let reg_form = $('#registration_form')
+                    let data = getFormData(reg_form)
+                    let csrf = data.csrfmiddlewaretoken
+                    console.log(data)
+                    console.log(csrf)
+                    delete data.csrfmiddlewaretoken
+                    data.email = 'a@bbb.com'
+                    console.log(data)
+                    console.log(csrf)
+                    $.ajax({
+                        url: '{% url "api:rest_register" %}',
+                        method : 'POST',
+                        data: reg_form.serialize(),
+                        headers: {
+                            'CSRF': csrf,
+                        },
+                    })
+                        .done(function(data) {
+                            console.log('api request success')
+                            console.log(data)
+                            window.location.href = '{% url "pages:home" %}'
+                        })
+                        .fail(function (data) {
+                            console.log('api request failure')
+                            let response = data.responseJSON
+                            console.log(response)
+
+                            for (var field in response) {
+                                if (response.hasOwnProperty(field)) {
+                                    console.log(field)
+                                    reg_form.form('add prompt', 'registration_' + field, response[field])
+                                }
+                            }
+                        })
+                },
+            })
+
+            $(document).ready(function () {
+
+                $('#login_form').submit(function (e) {
+                    e.preventDefault()
+                })
+                $('#registration_form').submit(function (e) {
+                    e.preventDefault()
+                })
+
+//                $('#login_form').ajaxForm({
+//                    url: '{% url "api:rest_login" %}',
+//                    dataType: 'json',
+//                    success: function (response) {
+//                        console.info('jquery login form success response: ', response)
+//                        $(location).attr('href', '{% url "pages:home" %}')
+//                    },
+//                    error: function (response) {
+//                        console.info('jquery login form error response: ', response)
+//                    },
+//                })
+//
+//
+//
+//                $('#registration_form').ajaxForm({
+//                    url: '{% url "api:rest_register" %}',
+//                    dataType: 'json',
+//                    success: function (response) {
+//                        console.info('jquery registration form success response: ', response)
+//                        window.location.href = '{% url "pages:home" %}'
+//                    },
+//                    error: function (response) {
+//                        console.info('jquery registration form error response: ', response)
+//                    },
+//                })
+
+                $(document).on('click', '#login_menu_selector', function (e) {
+                    $('.registration-element').addClass('inactive')
+                    $('.login-element').removeClass('inactive')
+                })
+
+                $(document).on('click', '#registration_menu_selector', function (e) {
+                    $('.login-element').addClass('inactive')
+                    $('.registration-element').removeClass('inactive')
+                })
+            })
+        </script>
+        <style>
+            html, body {
+                font-family: 'Roboto', sans-serif;
+                font-weight: light;
+            }
+
+            .navbar {
+                display: flex;
+                justify-content: space-between;
+                position: fixed;
+                top: 0;
+                width: 100%;
+                height: 8%;
+                z-index: 10;
+            {% if home_nav %}
+                background: none;
+            {% else %}
+                background: rgba(255, 255, 255, 0.9);
+            {% endif %}
+            }
+
+            .button-group {
+                display: flex;
+                margin-top: 30px;
+            }
+
+            .nav_item {
+                color: #222222;
+                font-weight: bold;
+                font-size: 2em;
+                margin: 0 30px 0 30px;
+                height: 1.5em;
+            }
+
+            .ui.small.modal {
+                font-size: 1.5em;
+            }
+
+            .field > input {
+                font-size: 1.3em !important;
+            }
+
+            .ui.button.login {
+                font-size: 1.3em;
+            }
+
+            .user-dropdown-label {
+                color: #222222;
+            }
+
+            .ui.dropdown > .menu {
+                border: none;
+                background: none;
+            }
+
+            .ui.dropdown > .menu > .item {
+                color: #222222;
+                font-weight: bold;
+                font-size: 0.8em;
+            }
+
+            .inactive {
+                display: none !important;
+            }
+
+        </style
     </body>
 </html>
