Login is functional through rest_auth.

--- a/TT/templates/articles/list.html
+++ b/TT/templates/articles/list.html
@@ -56,10 +56,6 @@
             color: #dddddd;
         }
 
-        p {
-            color: white;
-        }
-
         .img-container {
             position: absolute;
             height: 100%;
@@ -84,7 +80,7 @@
             z-index: -6;
         }
 
-        .divider {
+        .header.divider {
             margin: 10vh !important;
         }
 
