Comments and replies work. Comment and reply deletion work. On click of delete button, user is prompted with confirmation modal. Unauthenticated users are prompted with a login modal when they click the comment input box.

--- a/TT/templates/articles/detail.html
+++ b/TT/templates/articles/detail.html
@@ -51,5 +51,21 @@
 {% endblock content %}
 
 {% block before_footer %}
+    <div class="ui basic modal">
+        <div class="ui icon header">
+            <i class="trash icon"></i>
+            Are you sure you would like to delete this comment?
+        </div>
+        <div class="actions" style="display: flex; justify-content: center;">
+            <div class="ui gray basic cancel inverted button">
+                <i class="remove icon"></i>
+                Do not Delete
+            </div>
+            <div class="ui red ok inverted button">
+                <i class="checkmark icon"></i>
+                Delete
+            </div>
+        </div>
+    </div>
     <comment-section class="ui grid" csrf="{{ csrf_token }}"  author_id="{{ user.pk }}"article_id="{{ object.pk }}"></comment-section>
 {% endblock before_footer %}
