--- a/TT/templates/base.html
+++ b/TT/templates/base.html
@@ -20,7 +20,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
     </head>
     <body>
-        <div class="ui small modal">
+        <div class="ui small modal" id="login-modal">
             <div class="large header login-element">
                 Log in to Trefts Technologies
             </div>
@@ -151,7 +151,7 @@
             }
 
             {% if not user.is_authenticated %}
-            $('.ui.modal').modal('attach events', '#login_menu', 'show')
+            $('#login-modal').modal('attach events', '#login_menu', 'show')
             {% endif %}
 
 
@@ -191,8 +191,7 @@
                         },
                     })
                         .done(function(data) {
-                            console.log('api request success')
-                            window.location.href = '{% url "pages:home" %}'
+                            window.location.reload()
                         })
                         .fail(function (data) {
                             console.log('api request failure')
